<resources>
    <string name="app_name">micro:bit</string>
    <string name="app_name_without_colon">microbit</string>
    <string name="home_activity_name"></string>
    <string name="copyright">Copyright © 1995&#8211;2015 SAMSUNG</string>
    <string name="developed_by">Developed by</string>
    <string name="create_code_url" translatable="false">https://makecode.microbit.org/</string>
    <string name="discover_url" translatable="false">https://microbit.org/projects/make-it-code-it/?filters=makecode</string>
    <string name="my_scripts_url" translatable="false">https://makecode.microbit.org/</string>
    <string name="privacy_policy_url" translatable="false">http://microbit.org/privacy</string>
    <string name="terms_of_use_url" translatable="false">http://microbit.org/terms-of-use</string>
    <string name="about_url" translatable="false">http://microbit.org/about</string>
    <string name="feedback_email_address" translatable="false">rohit.ail@samsung.com</string>
    <string name="fetchDuringFindOutMoreUrl" translatable="false">https://microbit.org/get-started/user-guide/mobile</string>
    <string name="user_agent" translatable="false">SamsungBrowser/microbit Profile/OTA-DFU1.0</string>
    <string name="search_BLE_activity">Search micro:bit</string>
    <string name="device_details">Device_details</string>
    <string name="dummy_section_text" formatted="false">Section %1d is just a dummy section.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="phase1_complete_ok">Phase 1 completed. press button 1 followed by button on screen</string>
    <string name="phase2_complete_ok">Phase 2 completed. Device should be flashed</string>
    <string name="phase1_complete_not_ok">Device not found or in right mode or connection error</string>
    <string name="downloading_file">Downloading file</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">micro:bit Device Scan</string>
    <string name="title_activity_ledgrid">Find micro:bit</string>
    <string name="title_activity_connect">Connect</string>
    <string name="title_activity_gamepad">GamePad</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="microbit_not_found">micro:bit not found. Please search.</string>
    <string name="microbit_found">Use existing micro:bit ?</string>
    <string name="error_bluetooth_not_enabled">Bluetooth not enabled.</string>
    <string name="devices_bluetooth_not_enabled">Click to enable Bluetooth.</string>
    <string name="devices_initiate_process">Click to start.</string>
    <string name="devices_find_microbit">Search</string>
    <string name="devices_generate_code">Click to generate code.</string>
    <string name="devices_scanning">Looking for micro:bit, click to stop.</string>
    <string name="devices_ble_unsupported">BLE Not supported on your device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="pattern_to_flash">Enter the pattern displayed on your micro:bit to flash</string>
    <string name="pattern_to_pair">Enter the pattern displayed on your micro:bit to pair</string>
    <string name="pairing_failed_message">Cannot pair with the micro:bit.\n Retry?</string>
    <string name="pairing_failed_title">Pairing unsuccessful</string>
    <string name="pairing_success_message_1">You have successfully paired with micro:bit </string>
    <string name="pairing_success_title">micro:bit paired</string>
    <string name="run_code_button_name">Continue to Flash</string>
    <string name="flashing_failed_not_found">Flashing Failed!Cannot read the file</string>
    <string name="flashing_failed_io_error">Flashing Failed! Cannot find the file. Please reset micro:bit and try again.</string>
    <string name="flashing_failed_message">Flashing Failed! No Programs Found</string>
    <string name="flashing_aborted">Flashing aborted! Required service not found on device. Please reset micro:bit and try again.</string>
    <string name="connection_lost">The connection was lost while flashing. Try to send the same file again.</string>
    <string name="flashing_verifcation_failed">Flashing Failed</string>
    <string name="flashing_verifcation_failed_title">Cannot verify the flashing code. Please reset micro:bit and try again.</string>
    <string name="flashing_aborted_title">Aborted</string>
    <string name="could_not_connect_title">Unable to connect</string>
    <string name="flashing_failed_title">Flashing unsuccessful</string>
    <string name="flashing_progress_message">Please do not interact with micro:bit before flashing process is complete</string>
    <string name="flashing_success_message">You have successfully downloaded program to micro:bit</string>
    <string name="flashing_success_title">Flashing successful</string>
    <string name="flashing_error">Error</string>
    <string name="flashing_failed_no_microbit">At least one micro:bit must be paired before flashing </string>
    <string name="flashing_tip_title">Put the micro:bit in Flashing mode</string>
    <string name="pairing_tip">Hold buttons A and B down and then press RESET.\n Wait for "BLUEZONE" to appear on micro:bit before releasing buttons </string>
    <string name="flash_start_message">Do you want to flash the program to %s ?</string>
    <string name="flash_start_message_pair">Do you want to pair, then flash the program?</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_live">Live</string>
    <string name="menu_stage">Stage</string>
    <string name="menu_test">Test</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main_menu">Menu</string>
    <string name="menu_main_explore">Explore</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_help">Help</string>
    <string name="menu_main_privacy_cookies">Privacy &amp; Cookies</string>
    <string name="menu_main_terms_conditions">Terms &amp; Conditions</string>
    <string name="menu_main_send_feedback">Send us your feedback</string>
    <string name="menu_main_share_statistics">Share statistics</string>
    <string name="picture">Picture</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="intro_message">
        <![CDATA[

            Camera enabled!

        ]]>
    </string>
    <string name="camera_not_found">Camera Not Found</string>
    <string name="title_activity_about_us">about_us</string>
    <string name="back_button">Take me Back</string>
    <string name="about_us"> That\'s All !! Happy Coding </string>
    <string name="vibrating_via_microbit">Vibrating via micro:bit!</string>
    <string name="findphone_via_microbit">Find my phone alert via micro:bit!</string>
    <string name="ringtone_via_microbit">Playing ringtone via micro:bit!</string>
    <string name="sound_via_microbit">Playing sound via micro:bit!</string>
    <string name="alert">Alert&#8230;</string>
    <string name="previous_devices">Currently selected micro:bit</string>
    <string name="desc_previous_devices">No previously paired micro:bits</string>
    <string name="new_devices_pattern_null">Enter the pattern</string>
    <string name="new_devices">Connect to a new device</string>
    <string name="name_device">Name device</string>
    <string name="name_empty_error">Please enter device name.</string>
    <string name="connect">Connect</string>
    <string name="gamepad">Gamepad</string>
    <string name="connectNew">Pair a micro:bit</string>
    <string name="connect_tip_title">How to pair your micro:bit</string>
    <string name="connect_tip_title_resetToBLE">Reset to Bluetooth mode</string>
    <string name="step_connect_tip_text_step_three">Step 3</string>
    <string name="step_connect_tip_text_step_four_text">When you see the success message, \npress RESET and you\'re done!</string>
    <string name="connect_tip_text_step">Step 1</string>
    <string name="step_connect_tip_text_step_four">Step 4</string>
    <string name="desc_step_connect_tip_text_step_four_text">When you see the success message, press RESET and you\'re done!</string>
    <string name="desc_step_connect_tip_text_step_three">Step 3</string>
    <string name="desc_step_connect_tip_text_step_four">Step 4</string>
    <string name="searching_microbit">Choose Pair \n(or Pair &amp; connect) in the notification you will receive.</string>
    <string name="searching_microbit_one_line">Choose Pair (or Pair &amp; connect) in the notification you will receive.</string>
    <string name="step_connect_tip_text_step_two">Step 2</string>
    <string name="connect_tip_text">Hold the A and B buttons then press and release RESET. Keep holding A and B until the screen fills up</string>
    <string name="desc_connect_tip_text">Hold the A and B buttons then press and release RESET. Keep holding A and B until the screen fills up</string>
    <string name="desc_connect_tip_text_step">Step one</string>
    <string name="connect_tip_text_step_text">Hold the A and B buttons \nthen press and release RESET. \nKeep holding A and B \nuntil the screen fills up</string>
    <string name="desc_connect_tip_text_step_two">Step two</string>
    <string name="step_enter_pattern_tip_text">Step 2</string>
    <string name="enter_pattern_tip_text_one_line">Copy the pattern from your micro:bit onto this grid</string>
    <string name="desc_enter_pattern_tip_step_two">Step two</string>
    <string name="desc_enter_pattern_tip_text">Copy the pattern from your micro:bit onto this grid</string>
    <string name="connectSearchingTitle">Connecting&#8230;</string>
    <string name="desc_connectSearchingTitle">Connecting&#8230;</string>
    <string name="searchingTitle">Searching for micro:bit</string>
    <string name="pairing_msg_1">Found micro:bit</string>
    <string name="viewPairTriplePromptText">Press RESET three times</string>
    <string name="viewPairTriplePromptTextDesc">Press RESET three times</string>
    <string name="viewPathAntherWay">Show another way</string>
    <string name="pairingErrorTitle">Error</string>
    <string name="timeOut">Timeout</string>
    <string name="pairingErrorMessage">We cannot find that micro:bit\nRetry?</string>
    <string name="pairing_successful_tip_message">Please press RESET button and you\'re done!</string>
    <string name="deleteMicrobitTitle">Delete micro:bit?</string>
    <string name="deleteMicrobitMessage">Are you sure you want to remove this device?</string>
    <string name="your_projects">Your projects</string>
    <string name="saved_projects">saved projects</string>
    <string name="start_new_project">Start a new project</string>
    <string name="new_project">New project</string>
    <string name="no_projects">No projects found!</string>
    <string name="desc_back_to_home_from_flash_btn">Back to Menu</string>
    <string name="desc_flash_toolbar_header">My Programs</string>
    <string name="flash_toolbar_header">My Programs</string>
    <string name="desc_fetch">Fetch MY_DATA (V2 only)</string>
    <string name="my_pattern_is_different">My pattern is different</string>
    <string name="pattern">Pattern</string>
    <string name="searching_for_microbit_NAME">Searching for micro:bit %s</string>
    <string name="fetch_my_data">Fetch MY_DATA (V2 only)</string>
    <string name="more">More</string>
</resources>