<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headerBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/main_gray_color"
    android:elevation="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_projects">

    <!-- back button-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc_back_to_home_from_flash_btn"
        android:nextFocusDown="@id/flash_projects_title_txt"
        android:onClick="onClick"
        android:padding="@dimen/app_bar_back_btn_padding"
        android:src="@drawable/ic_back_arrow" />

    <!-- Small divider -->
    <include layout="@layout/app_bar_small_divider" />

    <!-- App bar title-->
    <TextView
        android:id="@+id/flash_projects_title_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/desc_flash_toolbar_header"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:nextFocusDown="@id/projectMoreButton"
        android:gravity="center"
        android:text="@string/flash_toolbar_header"
        android:textSize="@dimen/app_bar_title_text_size"
        android:textColor="@android:color/white" />

    <!-- Small divider -->
    <include layout="@layout/app_bar_small_divider" />

    <!-- more button-->
    <ImageButton
        android:id="@+id/projectMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/more"
        android:nextFocusDown="@id/appNameButton"
        android:onClick="onClick"
        android:padding="@dimen/app_bar_back_btn_padding"
        android:src="@drawable/ic_more_vdotw" />

    <!-- connected device status -->
</LinearLayout>
