<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewProjectsSearching"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black_color"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    android:weightSum="100">

    <View
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <!-- Emoji -->
    <ImageView
        android:layout_weight="20"
        android:id="@+id/viewProjectsSearchingEmo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_where_are_you"/>

    <!-- Title -->
    <TextView
        android:layout_weight="20"
        android:id="@+id/viewProjectsSearchingHeader"
        android:textSize="@dimen/popup_title_text_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:text="@string/searching_for_microbit_NAME"  />

    <!-- Pattern -->
    <ImageView
        android:id="@+id/viewProjectsSearchingGrid"
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:contentDescription="@string/pattern"
        android:src="@drawable/red_white_led_btn" />

    <View
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/pairTipButtonView"
        android:layout_weight="15"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:weightSum="100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/viewProjectsSearchingDifferent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pairing_step_button_height"
            android:layout_gravity="center"
            android:gravity="center|center_vertical"
            android:textSize="@dimen/pairing_step_button_text_size"
            android:textColor="@android:color/black"
            android:background="@drawable/white_btn"
            android:drawableEnd="@drawable/next_step_pairing_btn"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            android:text="@string/my_pattern_is_different" />
    </LinearLayout>

    <View
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <!-- Spinner - keep the screen on -->
    <ProgressBar
        android:id="@+id/spinnerBar"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:indeterminateDrawable="@drawable/white_progress_bar"
        android:indeterminateDuration="@integer/pairing_step_cycle_progress_bar_duration"
        android:keepScreenOn="true"
        android:visibility="visible" />

    <View
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</LinearLayout>
